--- a/shake/css/style.css
+++ b/shake/css/style.css
@@ -1,214 +1,1 @@
-@keyframes shake-color {
-  0% {
-    transform: translateX(0); }
-  30% {
-    transform: translateX(25rem) rotateZ(3deg); }
-  50% {
-    transform: translateX(-20rem) rotateZ(-3deg); }
-  65% {
-    transform: translateX(20rem) rotateZ(3deg);
-    color: rgba(0, 0, 0, 0); }
-  80% {
-    transform: translateX(-20rem) rotateZ(-3deg); }
-  90% {
-    transform: translateX(5rem);
-    color: var(--color-main); }
-  95% {
-    transform: translateX(-2rem); }
-  100% {
-    transform: translateX(0);
-    color: var(--color-color); } }
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-:root {
-  --color-main: #F9F9F9;
-  --color-main-hex: 249, 249, 249;
-  --color-shake: #2574BB;
-  --color-for: #31C432;
-  --color-color: #F9F9F9;
-  --color-color-arrow: #F50D5F;
-  --color-color-back: #2C2C2D;
-  --color-footer: #2C2C2D;
-  --color-black: #2C2C2D;
-  --color-white:#F9F9F9;
-  --anim-shake: 1.4s;
-  --anim-shake-delay: 0.4s 1s; }
-
-html {
-  font-size: 62.5%;
-  /* default 16px -> now 10px; better for user changes */ }
-
-body {
-  box-sizing: border-box;
-  background-color: var(--color-main);
-  transition: background-color var(--anim-shake-delay); }
-
-::selection {
-  background-color: var(--color-black);
-  color: var(--color-white); }
-
-.container {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: max-content;
-  grid-template-rows: 15vh max-content 0.9fr max-content;
-  justify-content: center;
-  justify-items: center; }
-
-body {
-  font-family: sans-serif;
-  font-weight: 400;
-  line-height: 1;
-  color: #2C2C2D; }
-
-.u-center-text {
-  text-align: center !important; }
-
-.u-margin-bottom-small {
-  margin-bottom: 1.5rem !important; }
-
-.u-margin-bottom-medium {
-  margin-bottom: 4rem !important; }
-
-.u-margin-bottom-big {
-  margin-bottom: 8rem !important; }
-
-.u-margin-top-small {
-  margin-bottom: 1.5rem !important; }
-
-.u-margin-top-medium {
-  margin-bottom: 4rem !important; }
-
-.u-margin-top-big {
-  margin-bottom: 8rem !important; }
-
-.u-margin-top-huge {
-  margin-bottom: 10rem !important; }
-
-.btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba(44, 44, 45, 0.2); }
-  .btn:hover::after {
-    transform: scaleX(1.5) scaleY(1.6);
-    opacity: 0; }
-
-.main-text__btn-shake, .main-text__btn-shake:link, .main-text__btn-shake:visited {
-  text-decoration: none;
-  border: none;
-  border-bottom: solid currentColor 3px;
-  line-height: 11.0rem;
-  cursor: pointer;
-  background-color: rgba(0, 0, 0, 0);
-  font-family: "Bitter", cursive;
-  font-size: 14rem;
-  color: var(--color-shake);
-  transition: color var(--anim-shake-delay), background-color var(--anim-shake-delay); }
-  .main-text__btn-shake::before, .main-text__btn-shake::after, .main-text__btn-shake:link::before, .main-text__btn-shake:link::after, .main-text__btn-shake:visited::before, .main-text__btn-shake:visited::after {
-    opacity: 0;
-    position: absolute;
-    transition: all 1s; }
-  .main-text__btn-shake::before, .main-text__btn-shake:link::before, .main-text__btn-shake:visited::before {
-    content: ">";
-    transform: translateX(-20rem) translateY(-1.1rem); }
-  .main-text__btn-shake::after, .main-text__btn-shake:link::after, .main-text__btn-shake:visited::after {
-    content: "<";
-    transform: translateX(calc(20rem - 100%)) translateY(-1.1rem); }
-
-.main-text__btn-shake:hover::before {
-  opacity: 1;
-  transform: translateX(-95%) translateY(-1.1rem); }
-
-.main-text__btn-shake:hover::after {
-  opacity: 1;
-  transform: translateX(0) translateY(-1.1rem); }
-
-.main-text__btn-shake:active, .main-text__btn-shake:focus {
-  outline: 0; }
-
-.main-text__for {
-  font-family: 'Qwigley', cursive;
-  font-size: 10rem;
-  color: var(--color-for);
-  transform: skewX(-20deg) scaleY(0.8);
-  margin-top: -1.4rem;
-  transition: color var(--anim-shake-delay), opacity var(--anim-shake); }
-
-.main-text__color {
-  font-family: 'Oswald', sans-serif;
-  font-size: 15rem;
-  text-transform: uppercase;
-  color: var(--color-color);
-  background-color: var(--color-color-back);
-  width: 60rem;
-  height: 15rem;
-  text-align: center;
-  line-height: .91;
-  margin-top: -1rem;
-  transition: color var(--anim-shake), background-color var(--anim-shake-delay); }
-  .main-text__color--anim {
-    animation: shake-color 1.4s ease-in-out 1; }
-  .main-text__color--new-color {
-    color: var(--color-color); }
-  .main-text__color::before, .main-text__color::after {
-    content: "";
-    background-color: var(--color-color-arrow);
-    mask: url(../img/arrow.svg);
-    -webkit-mask: url(../img/arrow.svg);
-    width: 21.6rem;
-    height: 9rem;
-    position: absolute;
-    transition: all var(--anim-shake-delay); }
-  .main-text__color::before {
-    transform: translate(-23rem, 3rem); }
-  .main-text__color::after {
-    transform: rotate(180deg) translate(-1.2rem, -3rem); }
-
-.main {
-  display: grid;
-  grid-template-columns: 60vw;
-  grid-template-rows: repeat(3, max-content);
-  justify-items: center;
-  align-items: center;
-  grid-row: 2 / 3; }
-
-.footer {
-  grid-row: 4 / 5;
-  width: 100%; }
-  .footer__line {
-    width: 100%;
-    height: 1px;
-    background-color: var(--color-footer);
-    transition: background-color var(--anim-shake-delay); }
-  .footer__list {
-    font-size: 1.2rem;
-    display: grid;
-    grid-template-columns: 0.5fr repeat(3, max-content 1fr) max-content 0.5fr;
-    justify-items: center;
-    align-items: center;
-    transform: translateY(-58%); }
-    .footer__list > li {
-      list-style: none;
-      width: 100%;
-      text-align: center;
-      display: inline-block;
-      width: calc(100% + 1.2rem);
-      background-color: var(--color-main);
-      transition: background-color var(--anim-shake-delay); }
-    .footer__list-item--1 {
-      grid-column: 2 / span 1; }
-    .footer__list-item--2 {
-      grid-column: 4 / span 1; }
-    .footer__list-item--3 {
-      grid-column: 6 / span 1; }
-    .footer__list-item--4 {
-      grid-column: 8 / span 1; }
-  .footer__btn {
-    text-decoration: none;
-    color: var(--color-footer);
-    transition: color var(--anim-shake-delay); }
+@-webkit-keyframes shake-color{0%{-webkit-transform:translateX(0);transform:translateX(0)}30%{-webkit-transform:translateX(25rem) rotateZ(3deg);transform:translateX(25rem) rotateZ(3deg)}50%{-webkit-transform:translateX(-20rem) rotateZ(-3deg);transform:translateX(-20rem) rotateZ(-3deg)}65%{-webkit-transform:translateX(20rem) rotateZ(3deg);transform:translateX(20rem) rotateZ(3deg);color:rgba(0,0,0,0)}80%{-webkit-transform:translateX(-20rem) rotateZ(-3deg);transform:translateX(-20rem) rotateZ(-3deg)}90%{-webkit-transform:translateX(5rem);transform:translateX(5rem);color:var(--color-main)}95%{-webkit-transform:translateX(-2rem);transform:translateX(-2rem)}100%{-webkit-transform:translateX(0);transform:translateX(0);color:var(--color-color)}}@keyframes shake-color{0%{-webkit-transform:translateX(0);transform:translateX(0)}30%{-webkit-transform:translateX(25rem) rotateZ(3deg);transform:translateX(25rem) rotateZ(3deg)}50%{-webkit-transform:translateX(-20rem) rotateZ(-3deg);transform:translateX(-20rem) rotateZ(-3deg)}65%{-webkit-transform:translateX(20rem) rotateZ(3deg);transform:translateX(20rem) rotateZ(3deg);color:rgba(0,0,0,0)}80%{-webkit-transform:translateX(-20rem) rotateZ(-3deg);transform:translateX(-20rem) rotateZ(-3deg)}90%{-webkit-transform:translateX(5rem);transform:translateX(5rem);color:var(--color-main)}95%{-webkit-transform:translateX(-2rem);transform:translateX(-2rem)}100%{-webkit-transform:translateX(0);transform:translateX(0);color:var(--color-color)}}*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}:root{--color-main: #F9F9F9;--color-main-hex: 249, 249, 249;--color-shake: #2574BB;--color-for: #31C432;--color-color: #F9F9F9;--color-color-arrow: #F50D5F;--color-color-back: #2C2C2D;--color-footer: #2C2C2D;--color-black: #2C2C2D;--color-white:#F9F9F9;--anim-shake: 1.4s;--anim-shake-delay: 0.4s 1s}html{font-size:62.5%}body{box-sizing:border-box;background-color:var(--color-main);transition:background-color var(--anim-shake-delay)}::-moz-selection{background-color:var(--color-black);color:var(--color-white)}::selection{background-color:var(--color-black);color:var(--color-white)}.container{height:100vh;display:grid;grid-template-columns:-webkit-max-content;grid-template-columns:max-content;grid-template-rows:15vh -webkit-max-content 0.9fr -webkit-max-content;grid-template-rows:15vh max-content 0.9fr max-content;justify-content:center;justify-items:center}body{font-family:sans-serif;font-weight:400;line-height:1;color:#2C2C2D}.u-center-text{text-align:center !important}.u-margin-bottom-small{margin-bottom:1.5rem !important}.u-margin-bottom-medium{margin-bottom:4rem !important}.u-margin-bottom-big{margin-bottom:8rem !important}.u-margin-top-small{margin-bottom:1.5rem !important}.u-margin-top-medium{margin-bottom:4rem !important}.u-margin-top-big{margin-bottom:8rem !important}.u-margin-top-huge{margin-bottom:10rem !important}.btn:hover{-webkit-transform:translateY(-3px);transform:translateY(-3px);box-shadow:0 1rem 2rem rgba(44,44,45,0.2)}.btn:hover::after{-webkit-transform:scaleX(1.5) scaleY(1.6);transform:scaleX(1.5) scaleY(1.6);opacity:0}.main-text__btn-shake,.main-text__btn-shake:link,.main-text__btn-shake:visited{text-decoration:none;border:none;border-bottom:solid currentColor 3px;line-height:11.0rem;cursor:pointer;background-color:rgba(0,0,0,0);font-family:"Bitter", cursive;font-size:14rem;color:var(--color-shake);transition:color var(--anim-shake-delay),background-color var(--anim-shake-delay)}.main-text__btn-shake::before,.main-text__btn-shake::after,.main-text__btn-shake:link::before,.main-text__btn-shake:link::after,.main-text__btn-shake:visited::before,.main-text__btn-shake:visited::after{opacity:0;position:absolute;transition:all 1s}.main-text__btn-shake::before,.main-text__btn-shake:link::before,.main-text__btn-shake:visited::before{content:">";-webkit-transform:translateX(-20rem) translateY(-1.1rem);transform:translateX(-20rem) translateY(-1.1rem)}.main-text__btn-shake::after,.main-text__btn-shake:link::after,.main-text__btn-shake:visited::after{content:"<";-webkit-transform:translateX(calc(20rem - 100%)) translateY(-1.1rem);transform:translateX(calc(20rem - 100%)) translateY(-1.1rem)}.main-text__btn-shake:hover::before{opacity:1;-webkit-transform:translateX(-95%) translateY(-1.1rem);transform:translateX(-95%) translateY(-1.1rem)}.main-text__btn-shake:hover::after{opacity:1;-webkit-transform:translateX(0) translateY(-1.1rem);transform:translateX(0) translateY(-1.1rem)}.main-text__btn-shake:active,.main-text__btn-shake:focus{outline:0}.main-text__for{font-family:'Qwigley', cursive;font-size:10rem;color:var(--color-for);-webkit-transform:skewX(-20deg) scaleY(0.8);transform:skewX(-20deg) scaleY(0.8);margin-top:-1.4rem;transition:color var(--anim-shake-delay),opacity var(--anim-shake)}.main-text__color{font-family:'Oswald', sans-serif;font-size:15rem;text-transform:uppercase;color:var(--color-color);background-color:var(--color-color-back);width:60rem;height:15rem;text-align:center;line-height:.91;margin-top:-1rem;transition:color var(--anim-shake),background-color var(--anim-shake-delay)}.main-text__color--anim{-webkit-animation:shake-color 1.4s ease-in-out 1;animation:shake-color 1.4s ease-in-out 1}.main-text__color--new-color{color:var(--color-color)}.main-text__color::before,.main-text__color::after{content:"";background-color:var(--color-color-arrow);mask:url(../img/arrow.svg);-webkit-mask:url(../img/arrow.svg);width:21.6rem;height:9rem;position:absolute;transition:all var(--anim-shake-delay)}.main-text__color::before{-webkit-transform:translate(-23rem, 3rem);transform:translate(-23rem, 3rem)}.main-text__color::after{-webkit-transform:rotate(180deg) translate(-1.2rem, -3rem);transform:rotate(180deg) translate(-1.2rem, -3rem)}.main{display:grid;grid-template-columns:60vw;grid-template-rows:repeat(3, -webkit-max-content);grid-template-rows:repeat(3, max-content);justify-items:center;align-items:center;grid-row:2 / 3}.footer{grid-row:4 / 5;width:100%}.footer__line{width:100%;height:1px;background-color:var(--color-footer);transition:background-color var(--anim-shake-delay)}.footer__list{font-size:1.2rem;display:grid;grid-template-columns:0.5fr repeat(3, -webkit-max-content 1fr) -webkit-max-content 0.5fr;grid-template-columns:0.5fr repeat(3, max-content 1fr) max-content 0.5fr;justify-items:center;align-items:center;-webkit-transform:translateY(-58%);transform:translateY(-58%)}.footer__list>li{list-style:none;width:100%;text-align:center;display:inline-block;width:calc(100% + 1.2rem);background-color:var(--color-main);transition:background-color var(--anim-shake-delay)}.footer__list-item--1{grid-column:2 / span 1}.footer__list-item--2{grid-column:4 / span 1}.footer__list-item--3{grid-column:6 / span 1}.footer__list-item--4{grid-column:8 / span 1}.footer__btn{text-decoration:none;color:var(--color-footer);transition:color var(--anim-shake-delay)}
